improved multi-lang and layout

--- a/frontend/client/public/i18n/en.json
+++ b/frontend/client/public/i18n/en.json
@@ -1,5 +1,6 @@
 {
   "personalInfo": {
+    "title": "Contact",
     "name": "Thomas Skomra",
     "location": "Remote / Birmingham, United Kingdom / Cracow, Poland",
     "mobile": "+44 7927 262552",
@@ -7,15 +8,16 @@
     "cvUrl": "Thomas_Skomra_CV.pdf"
   },
   "summary": {
-    "title": "Senior Full Stack Developer",
-    "description": "Senior Software Engineer with 12+ years of experience in full-stack web development. Proven expertise in .NET, Angular, and scalable architecture. Skilled in building robust systems from the ground up, designing APIs, optimizing performance, and leading end-to-end delivery. Open for remote contracts on B2B basis."
+    "title": "Profile",
+    "jobTitle": "Senior Full Stack Developer",
+    "description": "Senior Software Engineer with 12+ years of experience in full-stack web development. Proven expertise in .NET, Angular, and scalable architecture. Skilled in building robust systems from the ground up, designing APIs, optimizing performance, and leading end-to-end delivery. Open for remote contracts on B2B basis. No visa sponsorship required."
   },
   "experience": {
     "title": "Professional Experience",
     "jobs": [
       {
         "company": "Cappfinity",
-        "location": "Solihull, UK",
+        "location": "Remote / Solihull, UK",
         "title": "Senior Software Engineer",
         "period": "May 2016 – July 2025",
         "projectUrl": "https://www.strengthsprofile.com",
@@ -26,7 +28,7 @@
           "Developed basket system with custom discounting.",
           "Built automated accreditations & email workflows.",
           "Integrated with Mailchimp and Dotdigital.",
-          "Led migration from .NET 4.6 to .NET 9 using Docker, Kubernetes, Azure DevOps."
+          "Migrated from .NET 4.6 to .NET 9 using Docker, Kubernetes, Azure DevOps."
         ]
       },
       {
@@ -51,7 +53,7 @@
         "projectName": "Rate Track Rate Request",
         "responsibilities": [
           "Created web app for logistics quote requests.",
-          "Optimized T-SQL-heavy stored procedures.",
+          "Optimised T-SQL-heavy stored procedures.",
           "Worked with Web Forms, jQuery, and Telerik suite."
         ]
       },
@@ -78,39 +80,44 @@
     "title": "Skills",
     "categories": [
       {
-        "name": "Languages",
-        "items": [
-          "C#",
-          "JavaScript",
-          "TypeScript",
-          "T-SQL"
-        ]
-      },
-      {
-        "name": "Backend & APIs",
+        "name": "Backend, APIs & Messaging",
         "items": [
           "ASP.NET",
+          ".NET 4.6–9",
+          "Web Api",
           "REST APIs",
           "Entity Framework",
           "EF Core",
-          "Redis",
-          "SignalR"
+          "Microsoft SQL Server",
+          "MassTransit",
+          "RabbitMQ",
+          "Hangfire",
+          "SignalR",
+          "Auth0",
+          "SagePay"
         ]
       },
       {
-        "name": "Frameworks & Frontend",
+        "name": "Frontend & UI Frameworks",
         "items": [
-          ".NET 4.6–9",
-          "Angular",
-          "AngularJS",
-          "jQuery",
+          "HTML",
+          "CSS",
+          "Sass",
           "Tailwind",
+          "AngularJS-Angular 20",
+          "KnockoutJs",
+          "Blazor",
+          "jQuery",
           "PrimeNG",
-          "Web Forms"
+          "Angular Material",
+          "Web Forms",
+          "MVC",
+          "MVVM",
+          "Responsive Web Design (RWD)"
         ]
       },
       {
-        "name": "DevOps & Tools",
+        "name": "DevOps, Cloud & Tooling",
         "items": [
           "Azure",
           "Docker",
@@ -119,7 +126,27 @@
           "Team City",
           "Octopus Deploy",
           "Git",
-          "CI/CD",
+          "CI/CD pipelines",
+          "Visual Studio"
+        ]
+      },
+      {
+        "name": "Languages & Testing",
+        "items": [
+          "C#",
+          "JavaScript",
+          "TypeScript",
+          "T-SQL",
+          "xUnit",
+          "Unit Testing"
+        ]
+      },
+      {
+        "name": "Principles, Patterns & Integrations",
+        "items": [
+          "SOLID Principles",
+          "Architecture Patterns",
+          "Google Analytics",
           "Mailchimp",
           "Dotdigital"
         ]
@@ -129,5 +156,9 @@
   "downloadAsPdf": "Download as PDF",
   "print": "Print",
   "rodoTitle": "GDPR",
-  "rodoDisclaimer": "I authorise the processing of personal data contained within my CV, according to GDPR (EU) 2016/679, Article 6.1(a)."
+  "rodoDisclaimer": "I authorise the processing of personal data contained within my CV, according to GDPR (EU) 2016/679, Article 6.1(a).",
+  "languagesTitle": "Languages",
+  "english": "English (fluent)",
+  "polish": "Polish (native)",
+  "spanish": "Spanish (intermediate)"
 }
